# logisim_verilator

./: .gitignore  bd_top_blk_mem_gen_1_0.coe  cdm16_verilog.circ  gen_test_text.py  generate_font_coe.py  simplest_scheme.circ
make_shit/: .gitignore  Makefile  decoder_signals.txt  gen_ucode.py  gen_wrapper.py  model_api.h  run_img.py  vivado_bd.tcl
make_shit/audio_demo/: Makefile  README.md  font.h  main.c  start.asm
make_shit/audio_demo/cdm_spi/: cdm_driver.py  main.py  server.py  simple_test.py
make_shit/audio_demo/vivado_res/: bd_top.tcl  constrs.xdc  top.sv
make_shit/cdm_ebaz_driver/: cdm_driver.py  fuck_ps7_init.txt  main.py  server.py  simple_test.py
make_shit/gpu_demo/: main.c  main.s  start.asm
make_shit/gpu_demo/gpu_demo_life/: Makefile  display.c  life.c  life.h  main.c
make_shit/runner/: CMakeLists.txt  Cdm16ModelWrapper.cpp  Cdm16ModelWrapper.h  MMIODevice.cpp  MMIODevice.h  MemoryBus.cpp  MemoryBus.h  main.cpp
make_shit/verilog/: ALU.sv  ALU.v  adder16.v  branch_logic.sv  branch_logic.v  bus_control.v  cdm16.sv  cdm16.v  cdm16_wrapper.sv  cdm16_wrapper_wrapper.v  decoder.sv  decoder.v  registers.v  test.v
make_shit/verilog/include/: common.sv
make_shit/verilog/video/: color_bar.v  color_bar_old_ascii_table.v  gpu_to_bus.sv
verilator_component/: build.gradle.kts  settings.gradle.kts  test.circ
verilator_component/src/main/kotlin/ru/leadpogrommer/verilator_component/: Components.kt  Main.kt  VerilatorComponent.kt  VerilatorModuleWrapper.kt
